Bug 1721563 [Wayland] Flush wl_display connection before reading clipboard data, r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D120658